// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`composition as should render correctly 1`] = `
.emotion-0 {
  margin-left: -0.5rem;
  margin-right: -0.5rem;
  margin-top: -0.5rem;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-0:last-child {
  margin-bottom: -0.5rem;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-2 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-2:focus:not(:focus-visible) {
  outline: none;
}

<p
  class="emotion-0 emotion-1 emotion-2 emotion-3 bb-Box bb-Flex bb-Columns"
>
  Hello world
</p>
`;

exports[`composition hook should return with Columns props 1`] = `
Object {
  "children": <Context.Provider
    value={
      Object {
        "isGapless": false,
        "minBreakpoint": undefined,
        "spacing": "major-2",
      }
    }
  />,
  "className": "css-1yzde7l css-12n2nq2 css-63it0p css-1qnz8fc bb-Box bb-Flex bb-Columns",
}
`;

exports[`composition render props should render correctly 1`] = `
.emotion-0 {
  margin-left: -0.5rem;
  margin-right: -0.5rem;
  margin-top: -0.5rem;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-0:last-child {
  margin-bottom: -0.5rem;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-2 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-2:focus:not(:focus-visible) {
  outline: none;
}

<div
  class="emotion-0 emotion-1 emotion-2 emotion-3 bb-Box bb-Flex bb-Columns"
>
  Hello world
</div>
`;

exports[`defaultProps should render correctly for className 1`] = `
.emotion-0 {
  margin-left: -0.5rem;
  margin-right: -0.5rem;
  margin-top: -0.5rem;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-0:last-child {
  margin-bottom: -0.5rem;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-2 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-2:focus:not(:focus-visible) {
  outline: none;
}

.emotion-4 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  max-width: 100%;
  padding: 0.5rem;
}

@media (max-width: 768px) {
  .emotion-4 {
    -webkit-flex: none;
    -ms-flex: none;
    flex: none;
    width: 100%;
  }
}

<div
  class="emotion-0 emotion-1 emotion-2 emotion-3 test bb-Box bb-Flex bb-Columns"
>
  <div
    class="emotion-4 emotion-2 emotion-3 bb-Box bb-ColumnsColumn"
  >
    Column
  </div>
  <div
    class="emotion-4 emotion-2 emotion-3 bb-Box bb-ColumnsColumn"
  >
    Column
  </div>
  <div
    class="emotion-4 emotion-2 emotion-3 bb-Box bb-ColumnsColumn"
  >
    Column
  </div>
  <div
    class="emotion-4 emotion-2 emotion-3 bb-Box bb-ColumnsColumn"
  >
    Column
  </div>
</div>
`;

exports[`overrides Columns.Column.base should render correctly 1`] = `
.emotion-0 {
  margin-left: -0.5rem;
  margin-right: -0.5rem;
  margin-top: -0.5rem;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-0:last-child {
  margin-bottom: -0.5rem;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-2 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-2:focus:not(:focus-visible) {
  outline: none;
}

.emotion-4 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  max-width: 100%;
  padding: 0.5rem;
}

@media (max-width: 768px) {
  .emotion-4 {
    -webkit-flex: none;
    -ms-flex: none;
    flex: none;
    width: 100%;
  }
}

.emotion-4 {
  background-color: var(--bb-palette-red, #ff0000);
}

.emotion-7 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  max-width: 100%;
  padding: 0.5rem;
}

@media (max-width: 768px) {
  .emotion-7 {
    -webkit-flex: none;
    -ms-flex: none;
    flex: none;
    width: 100%;
  }
}

<div
  class="emotion-0 emotion-1 emotion-2 emotion-3 bb-Box bb-Flex bb-Columns"
>
  <div
    class="emotion-4 emotion-2 emotion-3 bb-Box bb-ColumnsColumn"
  >
    Column
  </div>
  <div
    class="emotion-7 emotion-2 emotion-3 bb-Box bb-ColumnsColumn"
  >
    Column
  </div>
  <div
    class="emotion-7 emotion-2 emotion-3 bb-Box bb-ColumnsColumn"
  >
    Column
  </div>
  <div
    class="emotion-7 emotion-2 emotion-3 bb-Box bb-ColumnsColumn"
  >
    Column
  </div>
</div>
`;

exports[`overrides Columns.base should render correctly 1`] = `
.emotion-0 {
  margin-left: -0.5rem;
  margin-right: -0.5rem;
  margin-top: -0.5rem;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-0:last-child {
  margin-bottom: -0.5rem;
}

.emotion-0 {
  background-color: var(--bb-palette-red, #ff0000);
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-2 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-2:focus:not(:focus-visible) {
  outline: none;
}

.emotion-4 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  max-width: 100%;
  padding: 0.5rem;
}

@media (max-width: 768px) {
  .emotion-4 {
    -webkit-flex: none;
    -ms-flex: none;
    flex: none;
    width: 100%;
  }
}

<div
  class="emotion-0 emotion-1 emotion-2 emotion-3 bb-Box bb-Flex bb-Columns"
>
  <div
    class="emotion-4 emotion-2 emotion-3 bb-Box bb-ColumnsColumn"
  >
    Column
  </div>
  <div
    class="emotion-4 emotion-2 emotion-3 bb-Box bb-ColumnsColumn"
  >
    Column
  </div>
  <div
    class="emotion-4 emotion-2 emotion-3 bb-Box bb-ColumnsColumn"
  >
    Column
  </div>
  <div
    class="emotion-4 emotion-2 emotion-3 bb-Box bb-ColumnsColumn"
  >
    Column
  </div>
</div>
`;

exports[`props basic offsets renders correctly for a spread offset of "both" 1`] = `
.emotion-0 {
  margin-left: -0.5rem;
  margin-right: -0.5rem;
  margin-top: -0.5rem;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-0:last-child {
  margin-bottom: -0.5rem;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-2 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-2:focus:not(:focus-visible) {
  outline: none;
}

.emotion-4 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  max-width: 100%;
  padding: 0.5rem;
}

.emotion-4 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 50%;
}

@media screen and (max-width: 767px) {
  .emotion-4 {
    width: 100%;
  }
}

@media screen and (max-width: 479px) {
  .emotion-4 {
    width: 100%;
  }
}

.emotion-7 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  max-width: 100%;
  padding: 0.5rem;
}

.emotion-7 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 16.666666666666664%;
}

@media screen and (max-width: 767px) {
  .emotion-7 {
    width: 100%;
  }
}

@media screen and (max-width: 479px) {
  .emotion-7 {
    width: 100%;
  }
}

.emotion-7 {
  margin-left: auto;
  margin-right: auto;
}

<div
  class="emotion-0 emotion-1 emotion-2 emotion-3 bb-Box bb-Flex bb-Columns"
>
  <div
    class="emotion-4 emotion-2 emotion-3 bb-Box bb-ColumnsColumn"
  >
    Column
  </div>
  <div
    class="emotion-7 emotion-2 emotion-3 bb-Box bb-ColumnsColumn"
  >
    Column
  </div>
</div>
`;

exports[`props basic offsets renders correctly for a spread offset of "left" 1`] = `
.emotion-0 {
  margin-left: -0.5rem;
  margin-right: -0.5rem;
  margin-top: -0.5rem;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-0:last-child {
  margin-bottom: -0.5rem;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-2 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-2:focus:not(:focus-visible) {
  outline: none;
}

.emotion-4 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  max-width: 100%;
  padding: 0.5rem;
}

.emotion-4 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 50%;
}

@media screen and (max-width: 767px) {
  .emotion-4 {
    width: 100%;
  }
}

@media screen and (max-width: 479px) {
  .emotion-4 {
    width: 100%;
  }
}

.emotion-7 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  max-width: 100%;
  padding: 0.5rem;
}

.emotion-7 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 16.666666666666664%;
}

@media screen and (max-width: 767px) {
  .emotion-7 {
    width: 100%;
  }
}

@media screen and (max-width: 479px) {
  .emotion-7 {
    width: 100%;
  }
}

.emotion-7 {
  margin-left: auto;
}

<div
  class="emotion-0 emotion-1 emotion-2 emotion-3 bb-Box bb-Flex bb-Columns"
>
  <div
    class="emotion-4 emotion-2 emotion-3 bb-Box bb-ColumnsColumn"
  >
    Column
  </div>
  <div
    class="emotion-7 emotion-2 emotion-3 bb-Box bb-ColumnsColumn"
  >
    Column
  </div>
</div>
`;

exports[`props basic offsets renders correctly for a spread offset of "right" 1`] = `
.emotion-0 {
  margin-left: -0.5rem;
  margin-right: -0.5rem;
  margin-top: -0.5rem;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-0:last-child {
  margin-bottom: -0.5rem;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-2 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-2:focus:not(:focus-visible) {
  outline: none;
}

.emotion-4 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  max-width: 100%;
  padding: 0.5rem;
}

.emotion-4 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 16.666666666666664%;
}

@media screen and (max-width: 767px) {
  .emotion-4 {
    width: 100%;
  }
}

@media screen and (max-width: 479px) {
  .emotion-4 {
    width: 100%;
  }
}

.emotion-4 {
  margin-right: auto;
}

.emotion-7 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  max-width: 100%;
  padding: 0.5rem;
}

.emotion-7 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 50%;
}

@media screen and (max-width: 767px) {
  .emotion-7 {
    width: 100%;
  }
}

@media screen and (max-width: 479px) {
  .emotion-7 {
    width: 100%;
  }
}

<div
  class="emotion-0 emotion-1 emotion-2 emotion-3 bb-Box bb-Flex bb-Columns"
>
  <div
    class="emotion-4 emotion-2 emotion-3 bb-Box bb-ColumnsColumn"
  >
    Column
  </div>
  <div
    class="emotion-7 emotion-2 emotion-3 bb-Box bb-ColumnsColumn"
  >
    Column
  </div>
</div>
`;

exports[`props basic offsets renders correctly for a spread offset of values between 1 and 11 1`] = `
.emotion-0 {
  margin-left: -0.5rem;
  margin-right: -0.5rem;
  margin-top: -0.5rem;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-0:last-child {
  margin-bottom: -0.5rem;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-2 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-2:focus:not(:focus-visible) {
  outline: none;
}

.emotion-4 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  max-width: 100%;
  padding: 0.5rem;
}

.emotion-4 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 50%;
}

@media screen and (max-width: 767px) {
  .emotion-4 {
    width: 100%;
  }
}

@media screen and (max-width: 479px) {
  .emotion-4 {
    width: 100%;
  }
}

.emotion-7 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  max-width: 100%;
  padding: 0.5rem;
}

.emotion-7 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 25%;
}

@media screen and (max-width: 767px) {
  .emotion-7 {
    width: 100%;
  }
}

@media screen and (max-width: 479px) {
  .emotion-7 {
    width: 100%;
  }
}

.emotion-7 {
  margin-left: 25%;
}

@media screen and (max-width: 767px) {
  .emotion-7 {
    margin-left: 0;
  }
}

@media screen and (max-width: 479px) {
  .emotion-7 {
    margin-left: 0;
  }
}

<div
  class="emotion-0 emotion-1 emotion-2 emotion-3 bb-Box bb-Flex bb-Columns"
>
  <div
    class="emotion-4 emotion-2 emotion-3 bb-Box bb-ColumnsColumn"
  >
    Column
  </div>
  <div
    class="emotion-7 emotion-2 emotion-3 bb-Box bb-ColumnsColumn"
  >
    Column
  </div>
</div>
`;

exports[`props renders correctly for applyTheme 1`] = `
.emotion-0 {
  margin-left: -0.5rem;
  margin-right: -0.5rem;
  margin-top: -0.5rem;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-0:last-child {
  margin-bottom: -0.5rem;
}

.emotion-0 {
  background-color: var(--bb-palette-red, #ff0000);
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-2 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-2:focus:not(:focus-visible) {
  outline: none;
}

.emotion-4 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  max-width: 100%;
  padding: 0.5rem;
}

@media (max-width: 768px) {
  .emotion-4 {
    -webkit-flex: none;
    -ms-flex: none;
    flex: none;
    width: 100%;
  }
}

<div
  class="emotion-0 emotion-1 emotion-2 emotion-3 bb-Box bb-Flex bb-Columns"
>
  <div
    class="emotion-4 emotion-2 emotion-3 bb-Box bb-ColumnsColumn"
  >
    test
  </div>
</div>
`;

exports[`props should render correctly 1`] = `
.emotion-0 {
  margin-left: -0.5rem;
  margin-right: -0.5rem;
  margin-top: -0.5rem;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-0:last-child {
  margin-bottom: -0.5rem;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-2 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-2:focus:not(:focus-visible) {
  outline: none;
}

.emotion-4 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  max-width: 100%;
  padding: 0.5rem;
}

@media (max-width: 768px) {
  .emotion-4 {
    -webkit-flex: none;
    -ms-flex: none;
    flex: none;
    width: 100%;
  }
}

<div
  class="emotion-0 emotion-1 emotion-2 emotion-3 bb-Box bb-Flex bb-Columns"
>
  <div
    class="emotion-4 emotion-2 emotion-3 bb-Box bb-ColumnsColumn"
  >
    Column
  </div>
  <div
    class="emotion-4 emotion-2 emotion-3 bb-Box bb-ColumnsColumn"
  >
    Column
  </div>
  <div
    class="emotion-4 emotion-2 emotion-3 bb-Box bb-ColumnsColumn"
  >
    Column
  </div>
  <div
    class="emotion-4 emotion-2 emotion-3 bb-Box bb-ColumnsColumn"
  >
    Column
  </div>
</div>
`;

exports[`props should render correctly for an alignX of center 1`] = `
.emotion-0 {
  margin-left: -0.5rem;
  margin-right: -0.5rem;
  margin-top: -0.5rem;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-0:last-child {
  margin-bottom: -0.5rem;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-1.emotion-1 {
  -webkit-flex-direction: unset;
  -ms-flex-direction: unset;
  flex-direction: unset;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: unset;
  -webkit-box-align: unset;
  -ms-flex-align: unset;
  align-items: unset;
}

.emotion-2 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-2:focus:not(:focus-visible) {
  outline: none;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-4 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  max-width: 100%;
  padding: 0.5rem;
}

@media (max-width: 768px) {
  .emotion-4 {
    -webkit-flex: none;
    -ms-flex: none;
    flex: none;
    width: 100%;
  }
}

<div
  class="emotion-0 emotion-1 emotion-2 emotion-3 bb-Box bb-Flex bb-Columns"
>
  <div
    class="emotion-4 emotion-2 emotion-6 bb-Box bb-ColumnsColumn"
  >
    Column
  </div>
  <div
    class="emotion-4 emotion-2 emotion-6 bb-Box bb-ColumnsColumn"
  >
    Column
  </div>
  <div
    class="emotion-4 emotion-2 emotion-6 bb-Box bb-ColumnsColumn"
  >
    Column
  </div>
  <div
    class="emotion-4 emotion-2 emotion-6 bb-Box bb-ColumnsColumn"
  >
    Column
  </div>
</div>
`;

exports[`props should render correctly for an alignX of left 1`] = `
.emotion-0 {
  margin-left: -0.5rem;
  margin-right: -0.5rem;
  margin-top: -0.5rem;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-0:last-child {
  margin-bottom: -0.5rem;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-1.emotion-1 {
  -webkit-flex-direction: unset;
  -ms-flex-direction: unset;
  flex-direction: unset;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  -webkit-align-items: unset;
  -webkit-box-align: unset;
  -ms-flex-align: unset;
  align-items: unset;
}

.emotion-2 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-2:focus:not(:focus-visible) {
  outline: none;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-4 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  max-width: 100%;
  padding: 0.5rem;
}

@media (max-width: 768px) {
  .emotion-4 {
    -webkit-flex: none;
    -ms-flex: none;
    flex: none;
    width: 100%;
  }
}

<div
  class="emotion-0 emotion-1 emotion-2 emotion-3 bb-Box bb-Flex bb-Columns"
>
  <div
    class="emotion-4 emotion-2 emotion-6 bb-Box bb-ColumnsColumn"
  >
    Column
  </div>
  <div
    class="emotion-4 emotion-2 emotion-6 bb-Box bb-ColumnsColumn"
  >
    Column
  </div>
  <div
    class="emotion-4 emotion-2 emotion-6 bb-Box bb-ColumnsColumn"
  >
    Column
  </div>
  <div
    class="emotion-4 emotion-2 emotion-6 bb-Box bb-ColumnsColumn"
  >
    Column
  </div>
</div>
`;

exports[`props should render correctly for an alignX of right 1`] = `
.emotion-0 {
  margin-left: -0.5rem;
  margin-right: -0.5rem;
  margin-top: -0.5rem;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-0:last-child {
  margin-bottom: -0.5rem;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-1.emotion-1 {
  -webkit-flex-direction: unset;
  -ms-flex-direction: unset;
  flex-direction: unset;
  -webkit-box-pack: end;
  -ms-flex-pack: end;
  -webkit-justify-content: flex-end;
  justify-content: flex-end;
  -webkit-align-items: unset;
  -webkit-box-align: unset;
  -ms-flex-align: unset;
  align-items: unset;
}

.emotion-2 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-2:focus:not(:focus-visible) {
  outline: none;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

.emotion-4 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  max-width: 100%;
  padding: 0.5rem;
}

@media (max-width: 768px) {
  .emotion-4 {
    -webkit-flex: none;
    -ms-flex: none;
    flex: none;
    width: 100%;
  }
}

<div
  class="emotion-0 emotion-1 emotion-2 emotion-3 bb-Box bb-Flex bb-Columns"
>
  <div
    class="emotion-4 emotion-2 emotion-6 bb-Box bb-ColumnsColumn"
  >
    Column
  </div>
  <div
    class="emotion-4 emotion-2 emotion-6 bb-Box bb-ColumnsColumn"
  >
    Column
  </div>
  <div
    class="emotion-4 emotion-2 emotion-6 bb-Box bb-ColumnsColumn"
  >
    Column
  </div>
  <div
    class="emotion-4 emotion-2 emotion-6 bb-Box bb-ColumnsColumn"
  >
    Column
  </div>
</div>
`;

exports[`props should render correctly for an alignY of bottom 1`] = `
.emotion-0 {
  margin-left: -0.5rem;
  margin-right: -0.5rem;
  margin-top: -0.5rem;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-0:last-child {
  margin-bottom: -0.5rem;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-1.emotion-1 {
  -webkit-flex-direction: unset;
  -ms-flex-direction: unset;
  flex-direction: unset;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
  -webkit-box-pack: unset;
  -ms-flex-pack: unset;
  -webkit-justify-content: unset;
  justify-content: unset;
}

.emotion-2 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-2:focus:not(:focus-visible) {
  outline: none;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: end;
  -ms-flex-pack: end;
  -webkit-justify-content: flex-end;
  justify-content: flex-end;
}

.emotion-4 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  max-width: 100%;
  padding: 0.5rem;
}

@media (max-width: 768px) {
  .emotion-4 {
    -webkit-flex: none;
    -ms-flex: none;
    flex: none;
    width: 100%;
  }
}

<div
  class="emotion-0 emotion-1 emotion-2 emotion-3 bb-Box bb-Flex bb-Columns"
>
  <div
    class="emotion-4 emotion-2 emotion-6 bb-Box bb-ColumnsColumn"
  >
    Column
  </div>
  <div
    class="emotion-4 emotion-2 emotion-6 bb-Box bb-ColumnsColumn"
  >
    Column
  </div>
  <div
    class="emotion-4 emotion-2 emotion-6 bb-Box bb-ColumnsColumn"
  >
    Column
  </div>
  <div
    class="emotion-4 emotion-2 emotion-6 bb-Box bb-ColumnsColumn"
  >
    Column
  </div>
</div>
`;

exports[`props should render correctly for an alignY of center 1`] = `
.emotion-0 {
  margin-left: -0.5rem;
  margin-right: -0.5rem;
  margin-top: -0.5rem;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-0:last-child {
  margin-bottom: -0.5rem;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-1.emotion-1 {
  -webkit-flex-direction: unset;
  -ms-flex-direction: unset;
  flex-direction: unset;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: unset;
  -ms-flex-pack: unset;
  -webkit-justify-content: unset;
  justify-content: unset;
}

.emotion-2 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-2:focus:not(:focus-visible) {
  outline: none;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-4 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  max-width: 100%;
  padding: 0.5rem;
}

@media (max-width: 768px) {
  .emotion-4 {
    -webkit-flex: none;
    -ms-flex: none;
    flex: none;
    width: 100%;
  }
}

<div
  class="emotion-0 emotion-1 emotion-2 emotion-3 bb-Box bb-Flex bb-Columns"
>
  <div
    class="emotion-4 emotion-2 emotion-6 bb-Box bb-ColumnsColumn"
  >
    Column
  </div>
  <div
    class="emotion-4 emotion-2 emotion-6 bb-Box bb-ColumnsColumn"
  >
    Column
  </div>
  <div
    class="emotion-4 emotion-2 emotion-6 bb-Box bb-ColumnsColumn"
  >
    Column
  </div>
  <div
    class="emotion-4 emotion-2 emotion-6 bb-Box bb-ColumnsColumn"
  >
    Column
  </div>
</div>
`;

exports[`props should render correctly for an alignY of top 1`] = `
.emotion-0 {
  margin-left: -0.5rem;
  margin-right: -0.5rem;
  margin-top: -0.5rem;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-0:last-child {
  margin-bottom: -0.5rem;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-1.emotion-1 {
  -webkit-flex-direction: unset;
  -ms-flex-direction: unset;
  flex-direction: unset;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  -webkit-box-pack: unset;
  -ms-flex-pack: unset;
  -webkit-justify-content: unset;
  justify-content: unset;
}

.emotion-2 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-2:focus:not(:focus-visible) {
  outline: none;
}

.emotion-3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
}

.emotion-4 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  max-width: 100%;
  padding: 0.5rem;
}

@media (max-width: 768px) {
  .emotion-4 {
    -webkit-flex: none;
    -ms-flex: none;
    flex: none;
    width: 100%;
  }
}

<div
  class="emotion-0 emotion-1 emotion-2 emotion-3 bb-Box bb-Flex bb-Columns"
>
  <div
    class="emotion-4 emotion-2 emotion-6 bb-Box bb-ColumnsColumn"
  >
    Column
  </div>
  <div
    class="emotion-4 emotion-2 emotion-6 bb-Box bb-ColumnsColumn"
  >
    Column
  </div>
  <div
    class="emotion-4 emotion-2 emotion-6 bb-Box bb-ColumnsColumn"
  >
    Column
  </div>
  <div
    class="emotion-4 emotion-2 emotion-6 bb-Box bb-ColumnsColumn"
  >
    Column
  </div>
</div>
`;

exports[`props should render correctly when isGapless = true 1`] = `
.emotion-0 {
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-2 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-2:focus:not(:focus-visible) {
  outline: none;
}

<div
  class="emotion-0 emotion-1 emotion-2 emotion-3 bb-Box bb-Flex bb-Columns"
>
  Hello world
</div>
`;

exports[`props should render correctly when isOneLine = true 1`] = `
.emotion-0 {
  margin-left: -0.5rem;
  margin-right: -0.5rem;
  margin-top: -0.5rem;
}

.emotion-0:last-child {
  margin-bottom: -0.5rem;
}

@media screen and (max-width: 767px) {
  .emotion-0 {
    -webkit-box-flex-wrap: wrap;
    -webkit-flex-wrap: wrap;
    -ms-flex-wrap: wrap;
    flex-wrap: wrap;
  }
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-2 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-2:focus:not(:focus-visible) {
  outline: none;
}

<div
  class="emotion-0 emotion-1 emotion-2 emotion-3 bb-Box bb-Flex bb-Columns"
>
  Hello world
</div>
`;

exports[`props should render correctly when isOneLine = true and minBreakpoint = mobile 1`] = `
.emotion-0 {
  margin-left: -0.5rem;
  margin-right: -0.5rem;
  margin-top: -0.5rem;
}

.emotion-0:last-child {
  margin-bottom: -0.5rem;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-2 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-2:focus:not(:focus-visible) {
  outline: none;
}

<div
  class="emotion-0 emotion-1 emotion-2 emotion-3 bb-Box bb-Flex bb-Columns"
>
  Hello world
</div>
`;

exports[`props should render correctly when isOneLine = true and minBreakpoint = tablet 1`] = `
.emotion-0 {
  margin-left: -0.5rem;
  margin-right: -0.5rem;
  margin-top: -0.5rem;
}

.emotion-0:last-child {
  margin-bottom: -0.5rem;
}

@media screen and (max-width: 479px) {
  .emotion-0 {
    -webkit-box-flex-wrap: wrap;
    -webkit-flex-wrap: wrap;
    -ms-flex-wrap: wrap;
    flex-wrap: wrap;
  }
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-2 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-2:focus:not(:focus-visible) {
  outline: none;
}

<div
  class="emotion-0 emotion-1 emotion-2 emotion-3 bb-Box bb-Flex bb-Columns"
>
  Hello world
</div>
`;

exports[`props should render correctly when minBreakpoint is mobile 1`] = `
.emotion-0 {
  margin-left: -0.5rem;
  margin-right: -0.5rem;
  margin-top: -0.5rem;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-0:last-child {
  margin-bottom: -0.5rem;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-2 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-2:focus:not(:focus-visible) {
  outline: none;
}

.emotion-4 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  max-width: 100%;
  padding: 0.5rem;
}

<div
  class="emotion-0 emotion-1 emotion-2 emotion-3 bb-Box bb-Flex bb-Columns"
>
  <div
    class="emotion-4 emotion-2 emotion-3 bb-Box bb-ColumnsColumn"
  >
    Column
  </div>
  <div
    class="emotion-4 emotion-2 emotion-3 bb-Box bb-ColumnsColumn"
  >
    Column
  </div>
  <div
    class="emotion-4 emotion-2 emotion-3 bb-Box bb-ColumnsColumn"
  >
    Column
  </div>
  <div
    class="emotion-4 emotion-2 emotion-3 bb-Box bb-ColumnsColumn"
  >
    Column
  </div>
</div>
`;

exports[`props should render correctly when minBreakpoint is tablet 1`] = `
.emotion-0 {
  margin-left: -0.5rem;
  margin-right: -0.5rem;
  margin-top: -0.5rem;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-0:last-child {
  margin-bottom: -0.5rem;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-2 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-2:focus:not(:focus-visible) {
  outline: none;
}

.emotion-4 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  max-width: 100%;
  padding: 0.5rem;
}

@media screen and (max-width: 479px) {
  .emotion-4 {
    width: 100%;
  }
}

<div
  class="emotion-0 emotion-1 emotion-2 emotion-3 bb-Box bb-Flex bb-Columns"
>
  <div
    class="emotion-4 emotion-2 emotion-3 bb-Box bb-ColumnsColumn"
  >
    Column
  </div>
  <div
    class="emotion-4 emotion-2 emotion-3 bb-Box bb-ColumnsColumn"
  >
    Column
  </div>
  <div
    class="emotion-4 emotion-2 emotion-3 bb-Box bb-ColumnsColumn"
  >
    Column
  </div>
  <div
    class="emotion-4 emotion-2 emotion-3 bb-Box bb-ColumnsColumn"
  >
    Column
  </div>
</div>
`;

exports[`props should render correctly with CSS props 1`] = `
.emotion-0 {
  margin-left: -0.5rem;
  margin-right: -0.5rem;
  margin-top: -0.5rem;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-0:last-child {
  margin-bottom: -0.5rem;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-2 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-2:focus:not(:focus-visible) {
  outline: none;
}

.emotion-3 {
  color: var(--bb-palette-primary, #000000)!important;
}

.emotion-4 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  max-width: 100%;
  padding: 0.5rem;
}

@media (max-width: 768px) {
  .emotion-4 {
    -webkit-flex: none;
    -ms-flex: none;
    flex: none;
    width: 100%;
  }
}

.emotion-6 {
  background-color: var(--bb-palette-secondary, #000000)!important;
}

<div
  class="emotion-0 emotion-1 emotion-2 emotion-3 bb-Box bb-Flex bb-Columns"
>
  <div
    class="emotion-4 emotion-2 emotion-6 bb-Box bb-ColumnsColumn"
  >
    Column
  </div>
  <div
    class="emotion-4 emotion-2 emotion-9 bb-Box bb-ColumnsColumn"
  >
    Column
  </div>
  <div
    class="emotion-4 emotion-2 emotion-9 bb-Box bb-ColumnsColumn"
  >
    Column
  </div>
  <div
    class="emotion-4 emotion-2 emotion-9 bb-Box bb-ColumnsColumn"
  >
    Column
  </div>
</div>
`;

exports[`props spreads renders correctly when all columns have sizes 1`] = `
.emotion-0 {
  margin-left: -0.5rem;
  margin-right: -0.5rem;
  margin-top: -0.5rem;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-0:last-child {
  margin-bottom: -0.5rem;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-2 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-2:focus:not(:focus-visible) {
  outline: none;
}

.emotion-4 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  max-width: 100%;
  padding: 0.5rem;
}

.emotion-4 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 50%;
}

@media screen and (max-width: 767px) {
  .emotion-4 {
    width: 100%;
  }
}

@media screen and (max-width: 479px) {
  .emotion-4 {
    width: 100%;
  }
}

.emotion-7 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  max-width: 100%;
  padding: 0.5rem;
}

.emotion-7 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 25%;
}

@media screen and (max-width: 767px) {
  .emotion-7 {
    width: 100%;
  }
}

@media screen and (max-width: 479px) {
  .emotion-7 {
    width: 100%;
  }
}

.emotion-10 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  max-width: 100%;
  padding: 0.5rem;
}

.emotion-10 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 16.666666666666664%;
}

@media screen and (max-width: 767px) {
  .emotion-10 {
    width: 100%;
  }
}

@media screen and (max-width: 479px) {
  .emotion-10 {
    width: 100%;
  }
}

.emotion-13 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  max-width: 100%;
  padding: 0.5rem;
}

.emotion-13 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 8.333333333333332%;
}

@media screen and (max-width: 767px) {
  .emotion-13 {
    width: 100%;
  }
}

@media screen and (max-width: 479px) {
  .emotion-13 {
    width: 100%;
  }
}

<div
  class="emotion-0 emotion-1 emotion-2 emotion-3 bb-Box bb-Flex bb-Columns"
>
  <div
    class="emotion-4 emotion-2 emotion-3 bb-Box bb-ColumnsColumn"
  >
    Column
  </div>
  <div
    class="emotion-7 emotion-2 emotion-3 bb-Box bb-ColumnsColumn"
  >
    Column
  </div>
  <div
    class="emotion-10 emotion-2 emotion-3 bb-Box bb-ColumnsColumn"
  >
    Column
  </div>
  <div
    class="emotion-13 emotion-2 emotion-3 bb-Box bb-ColumnsColumn"
  >
    Column
  </div>
</div>
`;

exports[`props spreads renders correctly when one of the columns does not have a size 1`] = `
.emotion-0 {
  margin-left: -0.5rem;
  margin-right: -0.5rem;
  margin-top: -0.5rem;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-0:last-child {
  margin-bottom: -0.5rem;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-2 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-2:focus:not(:focus-visible) {
  outline: none;
}

.emotion-4 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  max-width: 100%;
  padding: 0.5rem;
}

.emotion-4 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 50%;
}

@media screen and (max-width: 767px) {
  .emotion-4 {
    width: 100%;
  }
}

@media screen and (max-width: 479px) {
  .emotion-4 {
    width: 100%;
  }
}

.emotion-7 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  max-width: 100%;
  padding: 0.5rem;
}

.emotion-7 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 25%;
}

@media screen and (max-width: 767px) {
  .emotion-7 {
    width: 100%;
  }
}

@media screen and (max-width: 479px) {
  .emotion-7 {
    width: 100%;
  }
}

.emotion-10 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  max-width: 100%;
  padding: 0.5rem;
}

@media (max-width: 768px) {
  .emotion-10 {
    -webkit-flex: none;
    -ms-flex: none;
    flex: none;
    width: 100%;
  }
}

.emotion-13 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  max-width: 100%;
  padding: 0.5rem;
}

.emotion-13 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 8.333333333333332%;
}

@media screen and (max-width: 767px) {
  .emotion-13 {
    width: 100%;
  }
}

@media screen and (max-width: 479px) {
  .emotion-13 {
    width: 100%;
  }
}

<div
  class="emotion-0 emotion-1 emotion-2 emotion-3 bb-Box bb-Flex bb-Columns"
>
  <div
    class="emotion-4 emotion-2 emotion-3 bb-Box bb-ColumnsColumn"
  >
    Column
  </div>
  <div
    class="emotion-7 emotion-2 emotion-3 bb-Box bb-ColumnsColumn"
  >
    Column
  </div>
  <div
    class="emotion-10 emotion-2 emotion-3 bb-Box bb-ColumnsColumn"
  >
    Column
  </div>
  <div
    class="emotion-13 emotion-2 emotion-3 bb-Box bb-ColumnsColumn"
  >
    Column
  </div>
</div>
`;

exports[`props spreads renders correctly when the first column does not have a size 1`] = `
.emotion-0 {
  margin-left: -0.5rem;
  margin-right: -0.5rem;
  margin-top: -0.5rem;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-0:last-child {
  margin-bottom: -0.5rem;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-2 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-2:focus:not(:focus-visible) {
  outline: none;
}

.emotion-4 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  max-width: 100%;
  padding: 0.5rem;
}

@media (max-width: 768px) {
  .emotion-4 {
    -webkit-flex: none;
    -ms-flex: none;
    flex: none;
    width: 100%;
  }
}

.emotion-7 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  max-width: 100%;
  padding: 0.5rem;
}

.emotion-7 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 25%;
}

@media screen and (max-width: 767px) {
  .emotion-7 {
    width: 100%;
  }
}

@media screen and (max-width: 479px) {
  .emotion-7 {
    width: 100%;
  }
}

.emotion-10 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  max-width: 100%;
  padding: 0.5rem;
}

.emotion-10 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 16.666666666666664%;
}

@media screen and (max-width: 767px) {
  .emotion-10 {
    width: 100%;
  }
}

@media screen and (max-width: 479px) {
  .emotion-10 {
    width: 100%;
  }
}

.emotion-13 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  max-width: 100%;
  padding: 0.5rem;
}

.emotion-13 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 8.333333333333332%;
}

@media screen and (max-width: 767px) {
  .emotion-13 {
    width: 100%;
  }
}

@media screen and (max-width: 479px) {
  .emotion-13 {
    width: 100%;
  }
}

<div
  class="emotion-0 emotion-1 emotion-2 emotion-3 bb-Box bb-Flex bb-Columns"
>
  <div
    class="emotion-4 emotion-2 emotion-3 bb-Box bb-ColumnsColumn"
  >
    Column
  </div>
  <div
    class="emotion-7 emotion-2 emotion-3 bb-Box bb-ColumnsColumn"
  >
    Column
  </div>
  <div
    class="emotion-10 emotion-2 emotion-3 bb-Box bb-ColumnsColumn"
  >
    Column
  </div>
  <div
    class="emotion-13 emotion-2 emotion-3 bb-Box bb-ColumnsColumn"
  >
    Column
  </div>
</div>
`;

exports[`props spreads renders correctly when there is space still left on the right 1`] = `
.emotion-0 {
  margin-left: -0.5rem;
  margin-right: -0.5rem;
  margin-top: -0.5rem;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-0:last-child {
  margin-bottom: -0.5rem;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-2 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-2:focus:not(:focus-visible) {
  outline: none;
}

.emotion-4 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  max-width: 100%;
  padding: 0.5rem;
}

.emotion-4 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 50%;
}

@media screen and (max-width: 767px) {
  .emotion-4 {
    width: 100%;
  }
}

@media screen and (max-width: 479px) {
  .emotion-4 {
    width: 100%;
  }
}

.emotion-7 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  max-width: 100%;
  padding: 0.5rem;
}

.emotion-7 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 25%;
}

@media screen and (max-width: 767px) {
  .emotion-7 {
    width: 100%;
  }
}

@media screen and (max-width: 479px) {
  .emotion-7 {
    width: 100%;
  }
}

<div
  class="emotion-0 emotion-1 emotion-2 emotion-3 bb-Box bb-Flex bb-Columns"
>
  <div
    class="emotion-4 emotion-2 emotion-3 bb-Box bb-ColumnsColumn"
  >
    Column
  </div>
  <div
    class="emotion-7 emotion-2 emotion-3 bb-Box bb-ColumnsColumn"
  >
    Column
  </div>
</div>
`;

exports[`props variable offsets renders correctly when all spreadOffsets are specified 1`] = `
.emotion-0 {
  margin-left: -0.5rem;
  margin-right: -0.5rem;
  margin-top: -0.5rem;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-0:last-child {
  margin-bottom: -0.5rem;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-2 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-2:focus:not(:focus-visible) {
  outline: none;
}

.emotion-4 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  max-width: 100%;
  padding: 0.5rem;
}

.emotion-4 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 91.66666666666666%;
}

@media screen and (max-width: 1439px) {
  .emotion-4 {
    -webkit-flex: none;
    -ms-flex: none;
    flex: none;
    width: 83.33333333333334%;
  }
}

@media screen and (max-width: 1199px) {
  .emotion-4 {
    -webkit-flex: none;
    -ms-flex: none;
    flex: none;
    width: 75%;
  }
}

@media screen and (max-width: 1023px) {
  .emotion-4 {
    -webkit-flex: none;
    -ms-flex: none;
    flex: none;
    width: 66.66666666666666%;
  }
}

@media screen and (max-width: 767px) {
  .emotion-4 {
    -webkit-flex: none;
    -ms-flex: none;
    flex: none;
    width: 58.333333333333336%;
  }
}

@media screen and (max-width: 479px) {
  .emotion-4 {
    -webkit-flex: none;
    -ms-flex: none;
    flex: none;
    width: 50%;
  }
}

.emotion-4 {
  margin-left: 8.333333333333332%;
}

@media screen and (max-width: 1439px) {
  .emotion-4 {
    margin-left: 16.666666666666664%;
  }
}

@media screen and (max-width: 1199px) {
  .emotion-4 {
    margin-left: 25%;
  }
}

@media screen and (max-width: 1023px) {
  .emotion-4 {
    margin-left: 33.33333333333333%;
  }
}

@media screen and (max-width: 767px) {
  .emotion-4 {
    margin-left: 41.66666666666667%;
  }
}

@media screen and (max-width: 479px) {
  .emotion-4 {
    margin-left: 50%;
  }
}

<div
  class="emotion-0 emotion-1 emotion-2 emotion-3 bb-Box bb-Flex bb-Columns"
>
  <div
    class="emotion-4 emotion-2 emotion-3 bb-Box bb-ColumnsColumn"
  >
    Column
  </div>
</div>
`;

exports[`props variable offsets renders correctly when only mobile spread offset is specified 1`] = `
.emotion-0 {
  margin-left: -0.5rem;
  margin-right: -0.5rem;
  margin-top: -0.5rem;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-0:last-child {
  margin-bottom: -0.5rem;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-2 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-2:focus:not(:focus-visible) {
  outline: none;
}

.emotion-4 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  max-width: 100%;
  padding: 0.5rem;
}

@media screen and (max-width: 479px) {
  .emotion-4 {
    -webkit-flex: none;
    -ms-flex: none;
    flex: none;
    width: 66.66666666666666%;
  }
}

<div
  class="emotion-0 emotion-1 emotion-2 emotion-3 bb-Box bb-Flex bb-Columns"
>
  <div
    class="emotion-4 emotion-2 emotion-3 bb-Box bb-ColumnsColumn"
  >
    Column
  </div>
</div>
`;

exports[`props variable offsets renders correctly when only spreadOffset and spreadDesktopOffset is specified 1`] = `
.emotion-0 {
  margin-left: -0.5rem;
  margin-right: -0.5rem;
  margin-top: -0.5rem;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-0:last-child {
  margin-bottom: -0.5rem;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-2 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-2:focus:not(:focus-visible) {
  outline: none;
}

.emotion-4 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  max-width: 100%;
  padding: 0.5rem;
}

.emotion-4 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 83.33333333333334%;
}

@media screen and (max-width: 1023px) {
  .emotion-4 {
    -webkit-flex: none;
    -ms-flex: none;
    flex: none;
    width: 66.66666666666666%;
  }
}

@media screen and (max-width: 767px) {
  .emotion-4 {
    width: 100%;
  }
}

@media screen and (max-width: 479px) {
  .emotion-4 {
    width: 100%;
  }
}

.emotion-4 {
  margin-left: 16.666666666666664%;
}

@media screen and (max-width: 1023px) {
  .emotion-4 {
    margin-left: 33.33333333333333%;
  }
}

@media screen and (max-width: 767px) {
  .emotion-4 {
    margin-left: 0;
  }
}

@media screen and (max-width: 479px) {
  .emotion-4 {
    margin-left: 0;
  }
}

<div
  class="emotion-0 emotion-1 emotion-2 emotion-3 bb-Box bb-Flex bb-Columns"
>
  <div
    class="emotion-4 emotion-2 emotion-3 bb-Box bb-ColumnsColumn"
  >
    Column
  </div>
</div>
`;

exports[`props variable offsets renders correctly when only tablet spread offset is specified 1`] = `
.emotion-0 {
  margin-left: -0.5rem;
  margin-right: -0.5rem;
  margin-top: -0.5rem;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-0:last-child {
  margin-bottom: -0.5rem;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-2 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-2:focus:not(:focus-visible) {
  outline: none;
}

.emotion-4 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  max-width: 100%;
  padding: 0.5rem;
}

@media screen and (max-width: 767px) {
  .emotion-4 {
    -webkit-flex: none;
    -ms-flex: none;
    flex: none;
    width: 66.66666666666666%;
  }
}

@media screen and (max-width: 479px) {
  .emotion-4 {
    width: 100%;
  }
}

<div
  class="emotion-0 emotion-1 emotion-2 emotion-3 bb-Box bb-Flex bb-Columns"
>
  <div
    class="emotion-4 emotion-2 emotion-3 bb-Box bb-ColumnsColumn"
  >
    Column
  </div>
</div>
`;

exports[`props variable sizes renders correctly when all spreads are specified 1`] = `
.emotion-0 {
  margin-left: -0.5rem;
  margin-right: -0.5rem;
  margin-top: -0.5rem;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-0:last-child {
  margin-bottom: -0.5rem;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-2 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-2:focus:not(:focus-visible) {
  outline: none;
}

.emotion-4 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  max-width: 100%;
  padding: 0.5rem;
}

.emotion-4 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 91.66666666666666%;
}

@media screen and (max-width: 1439px) {
  .emotion-4 {
    -webkit-flex: none;
    -ms-flex: none;
    flex: none;
    width: 83.33333333333334%;
  }
}

@media screen and (max-width: 1199px) {
  .emotion-4 {
    -webkit-flex: none;
    -ms-flex: none;
    flex: none;
    width: 75%;
  }
}

@media screen and (max-width: 1023px) {
  .emotion-4 {
    -webkit-flex: none;
    -ms-flex: none;
    flex: none;
    width: 66.66666666666666%;
  }
}

@media screen and (max-width: 767px) {
  .emotion-4 {
    -webkit-flex: none;
    -ms-flex: none;
    flex: none;
    width: 58.333333333333336%;
  }
}

@media screen and (max-width: 479px) {
  .emotion-4 {
    -webkit-flex: none;
    -ms-flex: none;
    flex: none;
    width: 50%;
  }
}

.emotion-7 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  max-width: 100%;
  padding: 0.5rem;
}

.emotion-7 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 8.333333333333332%;
}

@media screen and (max-width: 1439px) {
  .emotion-7 {
    -webkit-flex: none;
    -ms-flex: none;
    flex: none;
    width: 16.666666666666664%;
  }
}

@media screen and (max-width: 1199px) {
  .emotion-7 {
    -webkit-flex: none;
    -ms-flex: none;
    flex: none;
    width: 25%;
  }
}

@media screen and (max-width: 1023px) {
  .emotion-7 {
    -webkit-flex: none;
    -ms-flex: none;
    flex: none;
    width: 33.33333333333333%;
  }
}

@media screen and (max-width: 767px) {
  .emotion-7 {
    -webkit-flex: none;
    -ms-flex: none;
    flex: none;
    width: 41.66666666666667%;
  }
}

@media screen and (max-width: 479px) {
  .emotion-7 {
    -webkit-flex: none;
    -ms-flex: none;
    flex: none;
    width: 50%;
  }
}

<div
  class="emotion-0 emotion-1 emotion-2 emotion-3 bb-Box bb-Flex bb-Columns"
>
  <div
    class="emotion-4 emotion-2 emotion-3 bb-Box bb-ColumnsColumn"
  >
    Column
  </div>
  <div
    class="emotion-7 emotion-2 emotion-3 bb-Box bb-ColumnsColumn"
  >
    Column
  </div>
</div>
`;

exports[`props variable sizes renders correctly when only mobile spread is specified 1`] = `
.emotion-0 {
  margin-left: -0.5rem;
  margin-right: -0.5rem;
  margin-top: -0.5rem;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-0:last-child {
  margin-bottom: -0.5rem;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-2 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-2:focus:not(:focus-visible) {
  outline: none;
}

.emotion-4 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  max-width: 100%;
  padding: 0.5rem;
}

@media screen and (max-width: 479px) {
  .emotion-4 {
    -webkit-flex: none;
    -ms-flex: none;
    flex: none;
    width: 66.66666666666666%;
  }
}

.emotion-7 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  max-width: 100%;
  padding: 0.5rem;
}

@media screen and (max-width: 479px) {
  .emotion-7 {
    -webkit-flex: none;
    -ms-flex: none;
    flex: none;
    width: 33.33333333333333%;
  }
}

<div
  class="emotion-0 emotion-1 emotion-2 emotion-3 bb-Box bb-Flex bb-Columns"
>
  <div
    class="emotion-4 emotion-2 emotion-3 bb-Box bb-ColumnsColumn"
  >
    Column
  </div>
  <div
    class="emotion-7 emotion-2 emotion-3 bb-Box bb-ColumnsColumn"
  >
    Column
  </div>
</div>
`;

exports[`props variable sizes renders correctly when only spread and spreadDesktop is specified 1`] = `
.emotion-0 {
  margin-left: -0.5rem;
  margin-right: -0.5rem;
  margin-top: -0.5rem;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-0:last-child {
  margin-bottom: -0.5rem;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-2 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-2:focus:not(:focus-visible) {
  outline: none;
}

.emotion-4 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  max-width: 100%;
  padding: 0.5rem;
}

.emotion-4 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 83.33333333333334%;
}

@media screen and (max-width: 1023px) {
  .emotion-4 {
    -webkit-flex: none;
    -ms-flex: none;
    flex: none;
    width: 66.66666666666666%;
  }
}

@media screen and (max-width: 767px) {
  .emotion-4 {
    width: 100%;
  }
}

@media screen and (max-width: 479px) {
  .emotion-4 {
    width: 100%;
  }
}

.emotion-7 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  max-width: 100%;
  padding: 0.5rem;
}

.emotion-7 {
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  width: 16.666666666666664%;
}

@media screen and (max-width: 1023px) {
  .emotion-7 {
    -webkit-flex: none;
    -ms-flex: none;
    flex: none;
    width: 33.33333333333333%;
  }
}

@media screen and (max-width: 767px) {
  .emotion-7 {
    width: 100%;
  }
}

@media screen and (max-width: 479px) {
  .emotion-7 {
    width: 100%;
  }
}

<div
  class="emotion-0 emotion-1 emotion-2 emotion-3 bb-Box bb-Flex bb-Columns"
>
  <div
    class="emotion-4 emotion-2 emotion-3 bb-Box bb-ColumnsColumn"
  >
    Column
  </div>
  <div
    class="emotion-7 emotion-2 emotion-3 bb-Box bb-ColumnsColumn"
  >
    Column
  </div>
</div>
`;

exports[`props variable sizes renders correctly when only tablet spread is specified 1`] = `
.emotion-0 {
  margin-left: -0.5rem;
  margin-right: -0.5rem;
  margin-top: -0.5rem;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-0:last-child {
  margin-bottom: -0.5rem;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-2 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-2:focus:not(:focus-visible) {
  outline: none;
}

.emotion-4 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  max-width: 100%;
  padding: 0.5rem;
}

@media screen and (max-width: 767px) {
  .emotion-4 {
    -webkit-flex: none;
    -ms-flex: none;
    flex: none;
    width: 66.66666666666666%;
  }
}

@media screen and (max-width: 479px) {
  .emotion-4 {
    width: 100%;
  }
}

.emotion-7 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  max-width: 100%;
  padding: 0.5rem;
}

@media screen and (max-width: 767px) {
  .emotion-7 {
    -webkit-flex: none;
    -ms-flex: none;
    flex: none;
    width: 33.33333333333333%;
  }
}

@media screen and (max-width: 479px) {
  .emotion-7 {
    width: 100%;
  }
}

<div
  class="emotion-0 emotion-1 emotion-2 emotion-3 bb-Box bb-Flex bb-Columns"
>
  <div
    class="emotion-4 emotion-2 emotion-3 bb-Box bb-ColumnsColumn"
  >
    Column
  </div>
  <div
    class="emotion-7 emotion-2 emotion-3 bb-Box bb-ColumnsColumn"
  >
    Column
  </div>
</div>
`;

exports[`theming Columns.Column.base should render correctly 1`] = `
.emotion-0 {
  margin-left: -0.5rem;
  margin-right: -0.5rem;
  margin-top: -0.5rem;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-0:last-child {
  margin-bottom: -0.5rem;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-2 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-2:focus:not(:focus-visible) {
  outline: none;
}

.emotion-4 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  max-width: 100%;
  padding: 0.5rem;
}

@media (max-width: 768px) {
  .emotion-4 {
    -webkit-flex: none;
    -ms-flex: none;
    flex: none;
    width: 100%;
  }
}

.emotion-4 {
  background-color: var(--bb-palette-red, #ff0000);
}

<div
  class="emotion-0 emotion-1 emotion-2 emotion-3 bb-Box bb-Flex bb-Columns"
>
  <div
    class="emotion-4 emotion-2 emotion-3 bb-Box bb-ColumnsColumn"
  >
    Column
  </div>
  <div
    class="emotion-4 emotion-2 emotion-3 bb-Box bb-ColumnsColumn"
  >
    Column
  </div>
  <div
    class="emotion-4 emotion-2 emotion-3 bb-Box bb-ColumnsColumn"
  >
    Column
  </div>
  <div
    class="emotion-4 emotion-2 emotion-3 bb-Box bb-ColumnsColumn"
  >
    Column
  </div>
</div>
`;

exports[`theming Columns.base should render correctly 1`] = `
.emotion-0 {
  margin-left: -0.5rem;
  margin-right: -0.5rem;
  margin-top: -0.5rem;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

.emotion-0:last-child {
  margin-bottom: -0.5rem;
}

.emotion-0 {
  background-color: var(--bb-palette-red, #ff0000);
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-2 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
}

.emotion-2:focus:not(:focus-visible) {
  outline: none;
}

.emotion-4 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  max-width: 100%;
  padding: 0.5rem;
}

@media (max-width: 768px) {
  .emotion-4 {
    -webkit-flex: none;
    -ms-flex: none;
    flex: none;
    width: 100%;
  }
}

<div
  class="emotion-0 emotion-1 emotion-2 emotion-3 bb-Box bb-Flex bb-Columns"
>
  <div
    class="emotion-4 emotion-2 emotion-3 bb-Box bb-ColumnsColumn"
  >
    Column
  </div>
  <div
    class="emotion-4 emotion-2 emotion-3 bb-Box bb-ColumnsColumn"
  >
    Column
  </div>
  <div
    class="emotion-4 emotion-2 emotion-3 bb-Box bb-ColumnsColumn"
  >
    Column
  </div>
  <div
    class="emotion-4 emotion-2 emotion-3 bb-Box bb-ColumnsColumn"
  >
    Column
  </div>
</div>
`;
